# music_recommendation

./: README.md
src/project_folder/: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties  streamlit_app.py
src/project_folder/.github/workflows/: cd.yml  ci.yml
src/project_folder/conf/: config.yaml
src/project_folder/docs/: CI_CD.md
src/project_folder/k8s/: deployment.yaml  service.yaml
src/project_folder/notebooks/: music_reco.ipynb
src/project_folder/src/music_recommendation/: __init__.py  cli.py  config.py  schemas.py
src/project_folder/src/music_recommendation/features/: preprocessing.py
src/project_folder/src/music_recommendation/models/: base.py  collaborative.py  content_based.py  deep_models.py  hybrid.py  ml_models.py  user_product_matrix.py
src/project_folder/src/music_recommendation/pipelines/: __init__.py  training.py
src/project_folder/src/music_recommendation/services/: __init__.py  evaluation.py
src/project_folder/src/music_recommendation/ui/: streamlit_app.py
src/project_folder/src/music_recommendation/utils/: io.py
src/project_folder/tests/: test_pipeline.py
